resources/curity/basic/gateway-routes.yaml
#############################################
# Routes to expose the Curity Identity Server
#############################################
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idsvr-admin-route
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  hostnames:
  - admin.testcluster.example
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: curity-idsvr-admin-svc
      kind: Service
      port: 6749
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idsvr-runtime-route
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  hostnames:
  - login.testcluster.example
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: curity-idsvr-runtime-svc
      kind: Service
      port: 8443
---
###########################################
# Routes to expose the Curity Token Handler
###########################################
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idsvr-oauthagent-route
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  hostnames:
  - api.demoapp.example
  rules:
  - matches:
    - path:
        value: /oauthagent/example
    backendRefs:
    - name: curity-idsvr-runtime-svc
      kind: Service
      port: 8443
---
###################################
# Allows the Admin UI to be exposed
###################################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adminui-allow
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kong
      podSelector:
        matchLabels:
          app: kong-kong
    ports:
    - port: 6749
      protocol: TCP
  podSelector:
    matchLabels:
      role: curity-idsvr-admin
  policyTypes:
  - Ingress
